rename Jint csproj

--- a/Jint/IridiumJS.csproj
+++ b/Jint/IridiumJS.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Jint</RootNamespace>
-    <AssemblyName>Jint</AssemblyName>
+    <AssemblyName>IridiumJS</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile328</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
