--- a/Jint/project.json
+++ b/Jint/project.json
@@ -16,7 +16,8 @@
     "releaseNotes": "Fix package dependencies for .NET 4.5."
   },
   "buildOptions": {
-    "keyFile": "Jint.snk"
+    "keyFile": "Jint.snk",
+    "define": []
   },
   "frameworks": {
     "net45": {
@@ -24,19 +25,12 @@
         "System.Diagnostics.Contracts": "4.0.0.0"
       }
     },
-    ".NETPortable,Version=v4.0,Profile=Profile328": {
+    "netstandard1.4": {
       "buildOptions": {
         "define": [
-          "PORTABLE"
+          "NETSTANDARD"
         ]
       },
-      "frameworkAssemblies": {
-        "mscorlib": "",
-        "System": "",
-        "System.Core": ""
-      }
-    },
-    "netstandard1.3": {
       "dependencies": {
         "NETStandard.Library": "1.6.0",
         "System.Diagnostics.Contracts": "4.0.1",
