--- a/IridiumJS/IridiumJS.csproj
+++ b/IridiumJS/IridiumJS.csproj
@@ -5,8 +5,8 @@
     <Copyright>0xFireball, Sebastien Ros</Copyright>
     <AssemblyTitle>IridiumJS</AssemblyTitle>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <VersionPrefix>2.10.3.3</VersionPrefix>
-    <Authors>Sebastien Ros;0xFireball</Authors>
+    <VersionPrefix>2.10.3.4</VersionPrefix>
+    <Authors>Sebastien Ros;0xFireball;joonatoona;qxzcode</Authors>
     <TargetFrameworks>netstandard1.4</TargetFrameworks>
     <AssemblyName>IridiumJS</AssemblyName>
     <AssemblyOriginatorKeyFile>Jint.snk</AssemblyOriginatorKeyFile>
