--- a/IridiumJS/IridiumJS.csproj
+++ b/IridiumJS/IridiumJS.csproj
@@ -7,7 +7,7 @@
     <NeutralLanguage>en-US</NeutralLanguage>
     <VersionPrefix>2.11.0</VersionPrefix>
     <Authors>Sebastien Ros;0xFireball</Authors>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netcoreapp2.0</TargetFrameworks>
     <AssemblyName>IridiumJS</AssemblyName>
     <AssemblyOriginatorKeyFile>Jint.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
