--- a/Jint/Jint.csproj
+++ b/Jint/Jint.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <NeutralLanguage>en-US</NeutralLanguage>
     <TargetFrameworks>net40;net45;net451;netstandard1.3;netstandard2.0</TargetFrameworks>
-    <AssemblyOriginatorKeyFile>Jint.snk</AssemblyOriginatorKeyFile>
-    <SignAssembly>true</SignAssembly>
+    <!-- <AssemblyOriginatorKeyFile>Jint.snk</AssemblyOriginatorKeyFile>
+    <SignAssembly>true</SignAssembly> -->
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' OR '$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'net451' ">
